Feat: Add API definition GET:"/v1/user_groups".
