# sqle/docs/swagger.json
@@ -2231,6 +2231,30 @@
             }
         },
         "/v1/user_groups": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get user group info list",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user_group"
+                ],
+                "summary": "获取用户组列表",
+                "operationId": "getUserGroupListV1",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.GetUserGroupsResV1"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -4447,6 +4471,28 @@
                 }
             }
         },
+        "v1.GetUserGroupsResV1": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 0
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/v1.UserGroupListItemResV1"
+                    }
+                },
+                "message": {
+                    "type": "string",
+                    "example": "ok"
+                },
+                "total_nums": {
+                    "type": "integer"
+                }
+            }
+        },
         "v1.GetUserLoginResV1": {
             "type": "object",
             "properties": {
@@ -5241,6 +5287,23 @@
                 },
                 "user_name": {
                     "type": "string"
+                }
+            }
+        },
+        "v1.UserGroupListItemResV1": {
+            "type": "object",
+            "properties": {
+                "group_desc": {
+                    "type": "string"
+                },
+                "group_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_disabled": {
+                    "type": "boolean"
                 }
             }
         },
